<resources>
    <string name="app_name">Run Maze</string>
    <string name="workout">Work Out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activities">Activities</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="activity">Activity :</string>
    <string name="save">Save</string>
    <string name="login_strava">Login to Strava</string>

    <string-array name="activity_type_arrays">
        <item>Run</item>
        <item>Ride</item>
        <item>Swim</item>
        <item>Walk</item>
        <item>Yoga</item>
    </string-array>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>